@@ -17,6 +17,7 @@ package org.springframework.binding.method;
 
 import junit.framework.TestCase;
 
+import org.springframework.binding.convert.ConversionException;
 import org.springframework.binding.convert.support.DefaultConversionService;
 import org.springframework.binding.convert.support.TextToExpression;
 import org.springframework.binding.expression.support.OgnlExpressionParser;
@@ -41,7 +42,7 @@ public class TextToMethodSignatureTests extends TestCase {
 		assertEquals("foo", signature.getMethodName());
 		assertEquals(0, signature.getParameters().size());
 		
-		signature = (MethodSignature)converter.convert("foo");
+		signature = (MethodSignature)converter.convert("foo()");
 		assertEquals("foo", signature.getMethodName());
 		assertEquals(0, signature.getParameters().size());
 	}
@@ -93,5 +94,46 @@ public class TextToMethodSignatureTests extends TestCase {
 		assertEquals("flowScope.bar", signature.getParameters().getParameter(0).getName().toString());
 		assertEquals(String.class, signature.getParameters().getParameter(1).getType());
 		assertEquals("externalContext.requestParameterMap.test", signature.getParameters().getParameter(1).getName().toString());
+	}
+	
+	public void testCollectionConstructionSyntax() {
+		MethodSignature signature = (MethodSignature)converter.convert("foo({1, 2, 3})");
+		assertEquals("foo", signature.getMethodName());
+		assertEquals(1, signature.getParameters().size());
+		assertNull(signature.getParameters().getParameter(0).getType());
+		assertEquals("{1, 2, 3}", signature.getParameters().getParameter(0).getName().toString());
+	}
+	
+	public void testCollectionConstructionSyntaxWithType() {
+		MethodSignature signature = (MethodSignature)converter.convert("foo(java.util.List {1, 2, 3})");
+		assertEquals("foo", signature.getMethodName());
+		assertEquals(1, signature.getParameters().size());
+		assertEquals(java.util.List.class, signature.getParameters().getParameter(0).getType());
+		assertEquals("{1, 2, 3}", signature.getParameters().getParameter(0).getName().toString());
+		
+		signature = (MethodSignature)converter.convert("foo(a${b,#{1:2},e}f${g,#{3:4},j}k)");
+	}
+	
+	public void testSyntaxErrors() {
+		try {
+			converter.convert("foo(");
+			fail();
+		}
+		catch (ConversionException e) {
+		}
+
+		try {
+			converter.convert("foo(long 1, ${bar()}");
+			fail();
+		}
+		catch (ConversionException e) {
+		}
+		
+		try {
+			converter.convert("foo(long 1, {1, 2)");
+			fail();
+		}
+		catch (ConversionException e) {
+		}
 	}
 }
